@@ -65,6 +65,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   c - no longer sigabrt with "running" jobs not in an execution queue. log
       an error. 
   b - fixed segfault for when TORQUE thinks there's a nanny but there isn't
+  e - mapped 'qsub -P user:group' to qsub -P user -W group_list=group
 
 2.4.7
   b - fixed a bug for when a resource_list has been set, but isn't completely
